; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_amf.c_AMF_EncodeNumber.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_amf.c_AMF_EncodeNumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AMF_NUMBER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @AMF_EncodeNumber(i8* %0, i8* %1, double %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca double, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store double %2, double* %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 1
  %10 = getelementptr inbounds i8, i8* %9, i64 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ugt i8* %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %23

14:                                               ; preds = %3
  %15 = load i32, i32* @AMF_NUMBER, align 4
  %16 = trunc i32 %15 to i8
  %17 = load i8*, i8** %5, align 8
  %18 = getelementptr inbounds i8, i8* %17, i32 1
  store i8* %18, i8** %5, align 8
  store i8 %16, i8* %17, align 1
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @memcpy(i8* %19, double* %7, i32 8)
  %21 = load i8*, i8** %5, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 8
  store i8* %22, i8** %4, align 8
  br label %23

23:                                               ; preds = %14, %13
  %24 = load i8*, i8** %4, align 8
  ret i8* %24
}

declare dso_local i32 @memcpy(i8*, double*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
